# ScaleX-CLI

./: MANIFEST.in  README.md  commands.txt  inference_scalex.py  install_scale_windows.bat  install_scalex_linux.sh  patches.py  pyproject.toml  requirements.txt  run.bat  setup.cfg  setup.py
scalex/: __init__.py  train.py  utils.py  version.py
scalex/archs/: __init__.py  arcface_arch.py  gfpgan_bilinear_arch.py  gfpganv1_arch.py  gfpganv1_clean_arch.py  restoreformer_arch.py  stylegan2_bilinear_arch.py  stylegan2_clean_arch.py
scalex/data/: __init__.py  ffhq_degradation_dataset.py
scalex/models/: __init__.py  scalex_model.py
